--- a/restaurant.html
+++ b/restaurant.html
@@ -23,11 +23,11 @@
     <header>
       <!-- Beginning nav -->
       <nav>
-        <h1><a href="/">Restaurant Reviews</a></h1>
+        <h1><a href="/" aria-label="Link Restaurant Reviews">Restaurant Reviews</a></h1>
       </nav>
       <!-- Beginning breadcrumb -->
       <ul id="breadcrumb">
-        <li><a href="/">Home</a></li>
+        <li><a href="/" aria-label="Link Home">Home</a></li>
       </ul>
       <!-- End breadcrumb -->
       <!-- End nav -->
@@ -37,15 +37,17 @@
     <!-- Beginning main -->
     <main id="maincontent">
       <!-- Beginning map -->
-      <section id="map-container"><div id="map"></div></section>
-      <!-- End map -->
-      <!-- Beginning restaurant -->
-      <section id="restaurant-container">
-        <h1 id="restaurant-name"></h1>
-        <img id="restaurant-img" />
-        <p id="restaurant-cuisine"></p>
-        <p id="restaurant-address"></p>
-        <table id="restaurant-hours"></table>
+      <section id="maincontent-top">
+        <aside id="map-container"><div id="map"></div></aside>
+        <!-- End map -->
+        <!-- Beginning restaurant -->
+        <section id="restaurant-container">
+          <h1 id="restaurant-name"></h1>
+          <img id="restaurant-img" />
+          <p id="restaurant-cuisine"></p>
+          <p id="restaurant-address"></p>
+          <table id="restaurant-hours"></table>
+        </section>
       </section>
       <!-- end restaurant -->
       <!-- Beginning reviews -->
