--- a/index.html
+++ b/index.html
@@ -70,19 +70,23 @@
         });
       }
     </script>
-    <script
-      src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-      integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-      crossorigin=""
-    ></script>
+    <!-- Database helpers -->
     <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+    <!-- Main javascript file -->
     <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-    <!--
-      <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script>
-    -->
 
+    <!-- Google Maps -->
+    <script
+      async
+      defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4OpltmVxewqJVapqNOAzRaOEW_4LQj2c&libraries=places&callback=initMap"
+    ></script>
+    <!-- End scripts -->
+
+    <!-- Beginning footer -->
     <footer id="footer">
       Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
     </footer>
+    <!-- End footer -->
   </body>
 </html>
