--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+    <link rel="stylesheet" src="https://normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-      integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-      crossorigin=""
-    />
     <title>Restaurant Reviews</title>
   </head>
 
@@ -58,15 +52,13 @@
     <!-- Service Worker Registration -->
     <script>
       if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          navigator.serviceWorker.register('sw.js').then(
-            function(registration) {
-              console.log('ServiceWorker registration successful with scope: ', registration.scope);
-            },
-            function(err) {
-              console.log('ServiceWorker registration failed: ', err);
-            },
-          );
+        window.addEventListener('load', async () => {
+          try {
+            const registration = await navigator.serviceWorker.register('sw.js');
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          } catch (error) {
+            console.log('ServiceWorker registration failed: ', error);
+          }
         });
       }
     </script>
