--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFFFFF" />
-    <link rel="icon" href="imgs/icon.png" />
+    <link rel="icon" href="img/icon-32.png" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" src="https://normalize-css.googlecode.com/svn/trunk/normalize.css" />
+    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Restaurant Reviews</title>
   </head>
