--- a/restaurant.html
+++ b/restaurant.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Normalize.css for better cross-browser consistency -->
+    <meta name="theme-color" content="#FFFFFF" />
+    <link rel="icon" href="img/icon-32.png" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-    <!-- Main CSS file -->
-    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Restaurant Info</title>
   </head>
 
@@ -65,7 +66,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4OpltmVxewqJVapqNOAzRaOEW_4LQj2c&libraries=places&callback=initMap"
     ></script>
     <!-- End scripts -->
   </body>
