feat: create and configure gulpfile

--- a/app/index.html
+++ b/app/index.html
@@ -52,23 +52,8 @@
       </section>
     </main>
     <!-- End main -->
-    <!-- Service Worker Registration -->
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', async () => {
-          try {
-            const registration = await navigator.serviceWorker.register('sw.js');
-            console.log('ServiceWorker registration successful with scope: ', registration.scope);
-          } catch (error) {
-            console.log('ServiceWorker registration failed: ', error);
-          }
-        });
-      }
-    </script>
-    <!-- Database helpers -->
-    <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
     <!-- Main javascript file -->
-    <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+    <script type="application/javascript" charset="utf-8" src="js/main_bundle.js"></script>
 
     <!-- Google Maps -->
     <script
