--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -58,10 +58,8 @@
     <!-- End footer -->
 
     <!-- Beginning scripts -->
-    <!-- Database helpers -->
-    <script type="text/javascript" src="js/dbhelper.js"></script>
     <!-- Main javascript file -->
-    <script type="text/javascript" src="js/restaurant_info.js"></script>
+    <script type="text/javascript" src="js/restaurant_bundle.js"></script>
     <!-- Google Maps -->
     <script
       async
