chore: configure webpack and babel

--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
     </main>
     <!-- End main -->
     <!-- Main javascript file -->
-    <script type="application/javascript" charset="utf-8" src="js/main_bundle.js"></script>
+    <script type="application/javascript" charset="utf-8" src="js/bundle.js"></script>
 
     <!-- Google Maps -->
     <script
