--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -59,7 +59,7 @@
 
     <!-- Beginning scripts -->
     <!-- Main javascript file -->
-    <script type="text/javascript" src="js/restaurant_bundle.js"></script>
+    <script type="text/javascript" src="js/bundle.js"></script>
     <!-- Google Maps -->
     <script
       async
