feat: set up responsive images

--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFFFFF" />
-    <link rel="icon" href="img/icon-32.png" />
+    <link rel="icon" href="icons/icon-32.png" />
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
