--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#FFFFFF" />
     <link rel="icon" href="icons/icon-32.png" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+    <link
+      rel="stylesheet"
+      src="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Restaurant Reviews</title>
   </head>
@@ -17,7 +20,7 @@
     <header>
       <!-- Beginning nav -->
       <nav>
-        <h1><a href="/" tabindex="-1">Restaurant Reviews</a></h1>
+        <h1><a href="/" tabindex="0">Restaurant Reviews</a></h1>
       </nav>
       <!-- End nav -->
     </header>
@@ -30,7 +33,6 @@
         <div class="filter-options">
           <h2>Filter Results</h2>
           <select
-            tabindex="1"
             id="neighborhoods-select"
             name="neighborhoods"
             aria-label="Select Neighborhood"
@@ -39,7 +41,6 @@
             <option value="all">All Neighborhoods</option>
           </select>
           <select
-            tabindex="2"
             id="cuisines-select"
             name="cuisines"
             aria-label="Select Cusisine"
@@ -53,7 +54,7 @@
     </main>
     <!-- End main -->
     <!-- Main javascript file -->
-    <script type="application/javascript" charset="utf-8" src="js/bundle.js"></script>
+    <script type="application/javascript" src="js/bundle.js"></script>
 
     <!-- Google Maps -->
     <script
