--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -8,7 +8,10 @@
     <meta name="theme-color" content="#FFFFFF" />
     <link rel="icon" href="icons/icon-32.png" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+    <link
+      rel="stylesheet"
+      src="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Restaurant Info</title>
   </head>
@@ -38,7 +41,7 @@
         <!-- Beginning restaurant -->
         <section id="restaurant-container">
           <h1 id="restaurant-name"></h1>
-          <img id="restaurant-img" />
+          <img id="restaurant-img" alt="restaurant image" />
           <p id="restaurant-cuisine"></p>
           <p id="restaurant-address"></p>
           <table id="restaurant-hours"></table>
