fix: console.log errors

--- a/app/index.html
+++ b/app/index.html
@@ -32,20 +32,10 @@
       <section>
         <div class="filter-options">
           <h2>Filter Results</h2>
-          <select
-            id="neighborhoods-select"
-            name="neighborhoods"
-            aria-label="Select Neighborhood"
-            onchange="updateRestaurants()"
-          >
+          <select id="neighborhoods-select" name="neighborhoods" aria-label="Select Neighborhood">
             <option value="all">All Neighborhoods</option>
           </select>
-          <select
-            id="cuisines-select"
-            name="cuisines"
-            aria-label="Select Cusisine"
-            onchange="updateRestaurants()"
-          >
+          <select id="cuisines-select" name="cuisines" aria-label="Select Cusisine">
             <option value="all">All Cuisines</option>
           </select>
         </div>
