feat: fetch reviews from api

--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -49,7 +49,7 @@
       </section>
       <!-- end restaurant -->
       <!-- Beginning reviews -->
-      <section id="reviews-container"><ul id="reviews-list"></ul></section>
+      <section id="reviews-container"></section>
       <!-- End reviews -->
     </main>
     <!-- End main -->
