chore: create heroku procfile

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
     <!-- Beginning main -->
     <main id="maincontent">
-      <section id="map-container"><div id="map"></div></section>
+      <section id="map-container"><div id="map" role="application"></div></section>
       <section>
         <div class="filter-options">
           <h2>Filter Results</h2>
