--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -37,7 +37,7 @@
     <main id="maincontent">
       <!-- Beginning map -->
       <section id="maincontent-top">
-        <aside id="map-container"><div id="map"></div></aside>
+        <aside id="map-container"><div id="map" role="application"></div></aside>
         <!-- End map -->
         <!-- Beginning restaurant -->
         <section id="restaurant-container">
